--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "google/apiclient": "^2.18",
-        "ralouphie/getallheaders": "^3.0"
+        "google/apiclient": "2.15.0",
+        "ralouphie/getallheaders": "^3.0",
+        "google/apiclient-services": "^0.312.0"
     }
 }
