--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy PHP Website
 on:
   push:
     branches:
-      - main  # You can change this to your branch name
+      - main
 
 jobs:
   build:
@@ -19,15 +19,12 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Set up Google Cloud credentials
-      run: |
-        echo "${{ secrets.GCP_CREDENTIALS }}" > /tmp/gcp-credentials.json
-        export GOOGLE_APPLICATION_CREDENTIALS=/tmp/gcp-credentials.json
+        username: eshanadithaya428
+        password: ${{ secrets.DOCKER_PAT }}
 
     - name: Build and push Docker image
-      run: |
-        docker build -t your-dockerhub-username/php-website:latest .
-        docker push your-dockerhub-username/php-website:latest
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        push: true
+        tags: eshanadithaya428/php-website:latest
